Add test to debug failing join query, improve logging, add workflow description